# AI-Router-Blocker-AiO

./: .gitignore  404.html  ARCHITECTURE.md  CHANGELOG.md  CODEX_FOR_OSS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MASTER_PLAN.md  README.es.md  README.md  RELEASE_NOTES.md  ROADMAP.md  SECURITY.md  _fix_ci.py  ai_blocker.py  build.bat  build.sh  deploy.ps1  gateway_patch_preview.txt  index.html  main.txt  mkdocs.yml  pyproject.toml  test.py  translations.json
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build.yml  codeql.yml  docs.yml  greetings.yml  labeler.yml  publish.yml  stale.yml  test.yml
Formula/: ai-devsec-gateway.rb
ai_blocker/: __init__.py  __main__.py  audit_log.py  block_actions.py  config.py  constants.py  context_anonymizer.py  dlp_engine.py  domain_matcher.py  dpi_rules.py  gateway.py  guardrails.py  i18n.py  kernel_backends.py  network_backends.py  onnx_guardrail.py  semantic_dlp.py  system_utils.py  threat_intel.py  tls_manager.py  token_monitor.py  tray.py  ui.py
architecture/: index.html
cli/: index.html
codex_for_oss/: index.html
docs/: architecture.md  cli.md  codex_for_oss.md  index.md  installation.md  threat_model.md  use_cases.md
installation/: index.html
scoop/: ai-devsec-gateway.json  codegate.json  devgate.json
search/: search_index.json
tests/: integration_test_gateway.py  test_audit_log.py  test_blocklist.py  test_cli_backends.py  test_config.py  test_context_anonymizer.py  test_dlp_engine.py  test_dlp_policy.py  test_domain_matcher.py  test_dpi_rules.py  test_gateway.py  test_guardrails.py  test_hosts_operations.py  test_kernel_backends.py  test_language_detection.py  test_network_backends.py  test_onnx_guardrail.py  test_platform.py  test_process_detection.py  test_semantic_dlp.py  test_system_utils.py  test_threat_intel.py  test_tls_manager.py  test_token_monitor.py
threat_model/: index.html
use_cases/: index.html
