[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-devsec-gateway"
version = "1.4.0"
description = "Take back control. Intercept, audit, and route your AI traffic."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Akunimal" }
]
keywords = ["ai", "security", "privacy", "proxy", "blocker", "devsecops", "hosts", "firewall", "llm", "copilot"]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Topic :: Security",
    "Topic :: Software Development :: Build Tools",
]
dependencies = ["cryptography>=41.0.0"]

[project.urls]
Homepage = "https://github.com/Akunimal/AI-Router-Blocker-AiO"
Documentation = "https://github.com/Akunimal/AI-Router-Blocker-AiO#readme"
Repository = "https://github.com/Akunimal/AI-Router-Blocker-AiO"
"Bug Tracker" = "https://github.com/Akunimal/AI-Router-Blocker-AiO/issues"
Changelog = "https://github.com/Akunimal/AI-Router-Blocker-AiO/blob/main/CHANGELOG.md"
[project.scripts]
ai-devsec-gateway = "ai_blocker.__main__:main"
ai-blocker = "ai_blocker.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-mock>=3.10",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "--cov=. --cov-report=term-missing --cov-report=xml"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["."]
omit = [
    "tests/*",
    ".venv/*",
    "build/*",
    "dist/*",
    "setup.py",
    "ai_blocker/ui.py",
    "ai_blocker/tray.py",
    "ai_blocker/__main__.py"
]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 50
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.",
    "raise NotImplementedError",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501", "E402", "E741"]

[tool.ruff.lint.isort]
known-first-party = ["ai_blocker"]

[tool.setuptools]
packages = ["ai_blocker"]
